# swc

./: Cargo.toml  package.json
ecmascript/codegen/src/: decl.rs  lib.rs  typescript.rs
ecmascript/jsdoc/src/: ast.rs  lib.rs
ecmascript/parser/src/: error.rs
ecmascript/transforms/: Cargo.toml
macros/common/src/: binder.rs
native/: Cargo.toml
native/src/: bundle.rs  lib.rs  parse.rs  print.rs  transform.rs  util.rs
scripts/: coverage.sh
testing/src/: lib.rs
typescript/: Cargo.toml
typescript/checker/: .gitignore  Cargo.toml  package.json
typescript/checker-old/src/: lib.rs
typescript/checker-old/tests/: tests.rs
typescript/checker/benches/: analysis.rs  bench.rs  bench_clone.rs  export_const.ts  fn_try_catch.ts  identity.ts  is_function.ts  rxjs_internal_util_argument_out_of_range_error.ts  rxjs_internal_util_immediate.ts
typescript/checker/builtin/: Cargo.toml
typescript/checker/builtin/macros/: Cargo.toml
typescript/checker/builtin/macros/src/: lib.rs
typescript/checker/builtin/src/: lib.rs
typescript/checker/macros/: Cargo.toml
typescript/checker/scripts/: add.sh  conformance.ts  ignore-parser.sh  run.sh  sort.sh  success.py
typescript/checker/src/: assign.rs  builtin_types.rs  errors.rs  lib.rs  loader.rs  name.rs  store.rs  validator.rs  visit.rs
typescript/checker/tests/: done.txt  success.txt  tests.rs
typescript/dts/: Cargo.toml  TODOs.md
typescript/dts/src/: ambient.rs  dce.rs  lib.rs
typescript/stsc/: Cargo.toml
typescript/validator/: Cargo.toml
visit/: Cargo.toml
visit/tests/: opt_box.rs
(+2539 files in other folders)
