[package]
name = "swc_ts_builtin_types"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
edition = "2018"

[dependencies]
swc_atoms = { path = "../../../atoms" }
swc_common = { path = "../../../common", features = ["fold"] }
swc_ecma_ast = { path = "../../../ecmascript/ast", features = ["fold"] }
swc_ecma_parser = { path = "../../../ecmascript/parser", features = ["verify"] }
dashmap = "=3.4.0"
swc_ts_builtin_macro = { path = "./macros" }
once_cell = "1.3.1"
indexmap = "1.3.0"